<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>game</groupId>
  <artifactId>game</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <build>
  <plugins>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>2.3.2</version>
       <configuration>
        <source>1.8</source>
        <target>1.8</target>
       </configuration>
    </plugin>
  </plugins>
</build>
  <modules>
      <module>dto</module>
      <module>battle-engine</module>
      <module>server</module>
      <module>client</module>
      <module>desktopUI</module>
  </modules>
</project>

